--- a/public/user/assets/css/style.css
+++ b/public/user/assets/css/style.css
@@ -10,10 +10,22 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+
+.limit {
+    width: 330px;
+    height: 426px;
+    max-height: 426px;
+    overflow: hidden;
+}
+
+.limit img {
+    width: 100%;
+    height: 100%;
+}
 body {
     font-family: "Lato", sans-serif;
     color: #fff;
-    background: #322f30;
+    background: #000;
     -webkit-font-smoothing: antialiased;
 }
 a {
@@ -69,7 +81,7 @@ ul.social-icons {
     -moz-transition: 0.5s;
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    background-color: #322f30;
+    background-color: #000;
 }
 .fa-facebook:hover {
     background-color: #3d5b99;
@@ -81,59 +93,24 @@ ul.social-icons {
     -moz-transition: 0.5s;
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    background-color: #322f30;
+    background-color: #000;
 }
 .fa-twitter:hover {
     background-color: #00aced;
 }
-.fa-rss {
+.fa-instagram {
     padding: 10px 14px;
     -o-transition: 0.5s;
     -ms-transition: 0.5s;
     -moz-transition: 0.5s;
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    background-color: #322f30;
+    background-color: #000;
 }
-.fa-rss:hover {
-    background-color: #eb8231;
+.fa-instagram:hover {
+    background-color: #c32aa3;
 }
-.fa-youtube {
-    padding: 10px 14px;
-    -o-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    background-color: #322f30;
-}
-.fa-youtube:hover {
-    background-color: #e64a41;
-}
-.fa-linkedin {
-    padding: 10px 14px;
-    -o-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    background-color: #322f30;
-}
-.fa-linkedin:hover {
-    background-color: #0073a4;
-}
-.fa-github {
-    padding: 10px 14px;
-    -o-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    background-color: #322f30;
-}
-.fa-github:hover {
-    background-color: #5a32a3;
-}
+
 @font-face {
     font-family: "Oswald";
     font-style: normal;
@@ -153,7 +130,15 @@ ul {
 }
 a {
     text-decoration: none;
-    color: #798992;
+    color: #383838;
+}
+.a-footer {
+    color: #ffffff;
+    text-decoration: none;
+}
+.a-footer:hover {
+    color: #014797;
+    text-decoration: none;
 }
 a:hover {
     color: #646464;
@@ -264,7 +249,7 @@ img:hover {
     transition: all 0.5;
 }
 .top_nav li a:hover {
-    color: #ffa500;
+    color: #014797;
     text-decoration: none;
     outline: none;
 }
@@ -324,7 +309,7 @@ img:hover {
 }
 .logo > img {
     display: block;
-    width: 50%;
+    width: 80%;
     font-weight: normal;
 }
 .header_bottom_right {
@@ -929,7 +914,7 @@ span.meta_more:before {
     margin-top: 30px;
 }
 .footer_top {
-    background-color: #434c51;
+    background-color: #014797;
     display: inline;
     float: left;
     padding: 15px 0;
@@ -1003,7 +988,7 @@ span.meta_more:before {
     float: left;
     display: inline;
     width: 100%;
-    background: none repeat scroll 0 0 #282e31;
+    background: none repeat scroll 0 0 #798992;
     color: #eee;
     font-size: 12px;
     padding: 8px 20px;
@@ -1015,7 +1000,7 @@ span.meta_more:before {
 }
 .footer_bottom_left p,
 .footer_bottom_right p {
-    color: #949494;
+    color: #fff;
     margin: 9px 10px 10px;
 }
 .footer_bottom_right p {
